dataset1235/2025-2/805158916/users/1651421245/executions/2651470117_704983377.log
== SUBMISSION (2025-08-25 14:35:53)
-- CODE: 
# entrada, para que fique dois números reais diferentes 
x = int(input("digite o numero"))
y = int(input("digite um numero"))
#agora, é escrever os coisas 
Q2 = x // y # divisão inteira
R = x % y # resto da divisão inteira 
Q1 = x / y # divisão real 
Pr = x * y # multiplicação 
Pot = x ** y # potencia
#colocar o print para sair o resultado
print(Q2)
print(R)
print(Q1)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
196
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
32768
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
100000
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
2809
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
119716
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
120409
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 14:16:27)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
None
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
None
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
None
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
None
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
None
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:17:52)
-- CODE: 
# entrada, para que fique dois números reais diferentes 
x = input("digite o numero")
y = input("digite um numero")
#agora, usar duas barras (//) para fazer a divisão de dois números reais.
Q1 = x // y
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Q1 = x // y
         ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Q1 = x // y
         ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Q1 = x // y
         ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Q1 = x // y
         ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Q1 = x // y
         ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Q1 = x // y
         ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:36:57)
-- CODE: 
# entrada, para que fique dois números reais diferentes 
x = int(input("digite o numero"))
y = int(input("digite um numero"))
#agora, é escrever os coisas 
Q1 = x // y # divisão inteira
R = x % y # resto da divisão inteira 
Q2 = x / y # divisão real 
Pr = x * y # multiplicação 
Pot = x ** y # potencia
#colocar o print para sair o resultado
print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
196
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
32768
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
100000
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
2809
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
119716
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
120409
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:19:28)
-- CODE: 
# entrada, para que fique dois números reais diferentes 
x = input("digite o numero")
y = input("digite um numero")
#agora, usar duas barras (//) para fazer a divisão de dois números reais.
print  ( x // y)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print  ( x // y)
             ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print  ( x // y)
             ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print  ( x // y)
             ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print  ( x // y)
             ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print  ( x // y)
             ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print  ( x // y)
             ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:17:16)
-- CODE: 
# entrada, para que fique dois números reais diferentes 
x = input("digite o numero")
y = input("digite um numero")
#agora, usar duas barras (//) para fazer a divisão de dois números reais.
Q1 = x + y
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
digite o numerodigite um numero
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
digite o numerodigite um numero
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
digite o numerodigite um numero
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
digite o numerodigite um numero
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
digite o numerodigite um numero
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
digite o numerodigite um numero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 14:16:23)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
None
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
None
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
None
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
None
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
None
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:38:05)
-- CODE: 
# entrada, para que fique dois números reais diferentes 
x = int(input("digite o numero"))
y = int(input("digite um numero"))
#agora, é escrever os coisas 
Q1 = x // y # divisão inteira
R = x % y # resto da divisão inteira 
Q2 = x / y # divisão real 
Pr = x * y # multiplicação 
Pot = y ** 3 # potencia
#colocar o print para sair o resultado
print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:34:35)
-- CODE: 
# entrada, para que fique dois números reais diferentes 
x = input("digite o numero")
y = input("digite um numero")
#agora, é escrever os coisas 
Q2 = x // y # divisão inteira
R = x % y # resto da divisão inteira 
Q1 = x / y # divisão real 
Pr = x * y # multiplicação 
Pot = x ** y # potencia
#colocar o print para sair o resultado
print(Q2)
print(R)
print(Q1)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Q2 = x // y # divisão inteira
         ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Q2 = x // y # divisão inteira
         ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Q2 = x // y # divisão inteira
         ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Q2 = x // y # divisão inteira
         ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Q2 = x // y # divisão inteira
         ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Q2 = x // y # divisão inteira
         ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:07:38)
-- CODE: 
# entrada
x = input("digite o numero")
y = input("digite um numero")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
digite o numerodigite um numero
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
digite o numerodigite um numero
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
digite o numerodigite um numero
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
digite o numerodigite um numero
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
digite o numerodigite um numero
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
digite o numerodigite um numero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:07:13)
-- CODE: 
# entrada
x = imput("digite o numero")
y = imput("digite um numero")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = imput("digite o numero")
        ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = imput("digite o numero")
        ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = imput("digite o numero")
        ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = imput("digite o numero")
        ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = imput("digite o numero")
        ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = imput("digite o numero")
        ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:35:42)
-- CODE: 
# entrada, para que fique dois números reais diferentes 
x = int(input("digite o numero"))
y = int(input("digite um numero"))
#agora, é escrever os coisas 
Q2 = x // y # divisão inteira
R = x % y # resto da divisão inteira 
Q1 = x / y # divisão real 
Pr = x * y # multiplicação 
Pot = x ** y # potencia
#colocar o print para sair o resultado
print(Q2)
print(R)
print(Q1)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
196
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
32768
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
100000
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
2809
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
119716
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
120409
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:18:54)
-- CODE: 
# entrada, para que fique dois números reais diferentes 
x = input("digite o numero")
y = input("digite um numero")
#agora, usar duas barras (//) para fazer a divisão de dois números reais.
print = ( x // y)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = ( x // y)
              ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = ( x // y)
              ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = ( x // y)
              ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = ( x // y)
              ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = ( x // y)
              ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = ( x // y)
              ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:34:36)
-- CODE: 
# entrada, para que fique dois números reais diferentes 
x = input("digite o numero")
y = input("digite um numero")
#agora, é escrever os coisas 
Q2 = x // y # divisão inteira
R = x % y # resto da divisão inteira 
Q1 = x / y # divisão real 
Pr = x * y # multiplicação 
Pot = x ** y # potencia
#colocar o print para sair o resultado
print(Q2)
print(R)
print(Q1)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Q2 = x // y # divisão inteira
         ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Q2 = x // y # divisão inteira
         ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Q2 = x // y # divisão inteira
         ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Q2 = x // y # divisão inteira
         ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Q2 = x // y # divisão inteira
         ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Q2 = x // y # divisão inteira
         ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:34:17)
-- CODE: 
# entrada, para que fique dois números reais diferentes 
x = input("digite o numero")
y = input("digite um numero")
#agora, é escrever os coisas 
Q2 = x // y # divisão inteira
R = x % y # resto da divisão inteira 
Q1 = x / y # divisão real 
Pr = x * y # multiplicação 
Pot = x ** y # potencia
#colocar o print para sair o resultado
print(Q2)
print(R)
print(Q1)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Q2 = x // y # divisão inteira
         ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Q2 = x // y # divisão inteira
         ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Q2 = x // y # divisão inteira
         ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Q2 = x // y # divisão inteira
         ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Q2 = x // y # divisão inteira
         ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Q2 = x // y # divisão inteira
         ~~^^~~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:37:10)
-- CODE: 
# entrada, para que fique dois números reais diferentes 
x = int(input("digite o numero"))
y = int(input("digite um numero"))
#agora, é escrever os coisas 
Q1 = x // y # divisão inteira
R = x % y # resto da divisão inteira 
Q2 = x / y # divisão real 
Pr = x * y # multiplicação 
Pot = x ** y # potencia
#colocar o print para sair o resultado
print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
196
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
32768
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
100000
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
2809
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
119716
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
120409
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 14:16:20)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
None
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
None
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
None
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
None
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
None
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:37:51)
-- CODE: 
# entrada, para que fique dois números reais diferentes 
x = int(input("digite o numero"))
y = int(input("digite um numero"))
#agora, é escrever os coisas 
Q1 = x // y # divisão inteira
R = x % y # resto da divisão inteira 
Q2 = x / y # divisão real 
Pr = x * y # multiplicação 
Pot = y ** 3 # potencia
#colocar o print para sair o resultado
print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 14:16:23)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
None
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
None
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
None
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
None
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
None
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 14:36:31)
-- CODE: 
int(imput)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(imput)
        ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(imput)
        ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(imput)
        ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(imput)
        ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(imput)
        ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(imput)
        ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
